# paranoid-coder

./: .gitignore  README.md  README_MCP.md  pyproject.toml
docs/: user_manual.md
docs/development/: CHANGELOG.md  context.md  planned_changed.md  project_plan.md  todo.md
src/paranoid/: __init__.py  cli.py  config.py  mcp_server.py
src/paranoid/analysis/: __init__.py  entities.py  javascript_parser.py  parser.py  python_parser.py  relationships.py  typescript_parser.py
src/paranoid/commands/: __init__.py  analyze.py  ask.py  clean.py  config_cmd.py  doctor.py  export.py  index_cmd.py  init_cmd.py  prompts_cmd.py  stats.py  summarize.py  view.py
src/paranoid/graph/: __init__.py  query.py
src/paranoid/llm/: __init__.py  context.py  graph_context.py  ollama.py  prompts.py  query_classifier.py
src/paranoid/rag/: __init__.py  store.py
src/paranoid/storage/: __init__.py  base.py  migrations.py  models.py  sqlite.py
src/paranoid/utils/: __init__.py  hashing.py  (+1 more)
src/paranoid_coder.egg-info/: entry_points.txt
testing_grounds/app/: __init__.py  cli.py  main.py
testing_grounds/core/: __init__.py  config.py  utils.py
tests/: README.md  __init__.py
tests/integration/: __init__.py  test_analyze.py  test_ask.py  test_clean.py  test_config.py  test_doctor.py  test_export.py  test_index.py  test_init.py  test_prompts.py  test_stats.py  test_summarize.py
tests/unit/: test_analysis_parser.py  test_config.py  test_context.py  test_graph_queries.py  test_hashing.py  test_ignore.py  test_prompts.py  test_query_classifier.py  test_rag_store.py  test_storage.py
(+8 files in other folders)
